Altera o docker compose para expor a porta do postgreSQL para poder conectar localmente e verificar se está tudo ok

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,6 +39,8 @@ services:
       - POSTGRES_PASSWORD=PostgresPass
     expose:
       - 5432
+    ports:
+      - 5432:5432
     healthcheck:
       test: [ "CMD", "pg_isready" ]
       interval: 10s
