--- a/src/EclipseWorksApp.Infra/EclipseWorksApp.Infra.csproj
+++ b/src/EclipseWorksApp.Infra/EclipseWorksApp.Infra.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EclipseWorksApp.Domain\EclipseWorksApp.Domain.csproj" />
   </ItemGroup>
 
 </Project>
