--- a/src/EclipseWorksApp.API/appsettings.json
+++ b/src/EclipseWorksApp.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DbContext": "Host=localhost;Port=5432;Pooling=true;Database=eclipseworksappdb;User Id=postgres;Password=PostgresPass;"
+    "DbContext": "Host=db;Port=5432;Pooling=true;Database=eclipseworksappdb;User Id=postgres;Password=PostgresPass;"
   },
   "Logging": {
     "LogLevel": {
